# openvino_xai

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.ipynb  README.md  api.html  classification.py  genindex.html  index.html  inserter.py  main.py  methods.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js  setup.py  third-party-programs.txt  tox.ini
.ci/docker/: Dockerfile  README.md  build.sh  entrypoint.sh  start-runner.sh  stop-runner.sh
.github/workflows/: code_scan.yml  e2e.yml  pre_merge.yml  publish.yaml  publish.yml
_sources/: api.rst.txt  index.rst.txt
docs/: README.md  Usage.md  api.html  genindex.html  index.html  py-modindex.html
docs/api/: README.md
docs/api/source/: api.rst  conf.py  index.rst
docs/source/: api-manual.rst  conf.py  getting-started.md  index.rst  user-guide.md
docs/source/_static/css/: custom.css
docs/styleguide/: PyGuide.md
examples/: run.py  run_classification.py  run_detection.py
notebooks/xai_classification/: README.md  xai_classification.ipynb
notebooks/xai_saliency_map_interpretation/: README.md  imagewoof_usecases.json
openvino_xai/: __init__.py  explain.py  insert.py  methods.py  model.py  parameters.py  parse.py  saliency_map.py  utils.py
openvino_xai/algorithms/: __init__.py  create_method.py  method_base.py
openvino_xai/algorithms/black_box/: black_box_methods.py
openvino_xai/algorithms/white_box/: create_method.py  white_box_methods.py
openvino_xai/api/: __init__.py  api.py
openvino_xai/common/: __init__.py  parameters.py  utils.py
openvino_xai/explain/: __init__.py  auto.py  auto_explain.py  base.py  black_box.py  explain.py  white_box.py
openvino_xai/explainer/: __init__.py  explain_group.py  explainer.py  explanation.py  mode.py  parameters.py  utils.py  visualize.py  visualizer.py
openvino_xai/explanation/: __init__.py  explain.py  explain_model.py  explainer.py  explainers.py  explanation_parameters.py  explanation_result.py  model_inferrer.py  post_process.py  utils.py
openvino_xai/inserter/: __init__.py  inserter.py  model_parser.py  model_type.py  parameters.py
openvino_xai/insertion/: __init__.py  insert_xai_into_model.py  insertion_parameters.py  parse_model.py
openvino_xai/methods/: __init__.py  base.py  create_method.py  factory.py  method_base.py
openvino_xai/methods/black_box/: base.py  black_box_methods.py  rise.py
openvino_xai/methods/white_box/: activation_map.py  base.py  create_method.py  det_class_probability_map.py  recipro_cam.py  white_box_methods.py
openvino_xai/utils/: model_export.py  timm_models_export.py
openvino_xai/xai_branch_inserter/: __init__.py  insertion_parameters.py  model_parser.py  xai_branch_inserter.py
requirements/: base.txt  dev.txt  dev_timm.txt
tests/: conftest.py  test_classification.py  test_classification_timm.py  test_detection.py  test_postprocessor.py
tests/e2e/: test_classification_timm.py
tests/func/: test_classification_timm_full.py
tests/fuzz/: test_fuzz.py
tests/integration/: test_classification.py  test_classification_timm.py  test_detection.py
tests/integration/explanation/: test_explainer.py  test_explanation_result.py  test_postprocessor.py
tests/integration/insertion/: test_insertion.py
tests/intg/: test_classification.py  test_classification_timm.py  test_detection.py
tests/perf/: conftest.py  test_performance.py
tests/unit/algorithms/black_box/: test_black_box_method.py
tests/unit/algorithms/white_box/: test_create_method.py  test_white_box_method.py
tests/unit/common/: test_utils.py
tests/unit/explanation/: test_explainer.py  test_explanation.py  test_explanation_result.py  test_explanation_utils.py  test_postprocessing.py  test_postprocessor.py  test_utils.py  test_visualization.py
tests/unit/insertion/: test_insertion.py  test_model_parser.py  test_parameters.py
tests/unit/methods/black_box/: test_black_box_method.py
tests/unit/methods/white_box/: test_create_method.py  test_white_box_method.py
