# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openvino_xai"
version = "1.0.0rc0"
dependencies = [
  "openvino-dev==2023.2",
  "opencv-python",
  "numpy",
  "tqdm",
]
requires-python = ">=3.10"
authors = [
  {name = "Intel(R) Corporation"},
]
maintainers = [
  {name = "Intel(R) Corporation"},
]
description = "OpenVINO™ Explainable AI (XAI) Toolkit: Visual Explanation for OpenVINO Models"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["openvino-toolkit", "explainable-ai", "xai", "cnn", "transformer", "black-box", "white-box"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-csv",
  "pre-commit==3.7.0",
  "addict",
]
val = [
  "timm==0.9.5",
  "onnx==1.14.1",
]

[project.urls]
Homepage = "https://github.com/openvinotoolkit/openvino_xai"
Documentation = "https://curly-couscous-ovjvm29.pages.github.io/"
Repository = "https://github.com/openvinotoolkit/openvino_xai.git"

[tool.setuptools.packages.find]
include = ["openvino_xai*"]

[tool.black]
line-length = 120

[tool.coverage.paths]
source = [
    "openvino_xai",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
]
